--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,7 +10,7 @@
         <header>
             <nav class="fixed top-0 left-0 right-0 bg-white bg-opacity-90 backdrop-filter backdrop-blur-md border-gray-200 px-4 lg:px-6 py-2.5 z-50">
                 <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-                    <a href="#" class="flex items-center"><span class="text-indigo-600 self-center text-xl font-semibold whitespace-nowrap">BookSync</span></a>
+                    <a href="{{ url_for('index') }}" class="flex items-center"><span class="text-indigo-600 self-center text-xl font-semibold whitespace-nowrap">BookSync</span></a>
                     <div class="flex items-center lg:order-2">
                         <a href="{{ url_for('login') }}" class="text-gray-800 hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Log in</a><a href="{{ url_for('registration_form') }}" class="text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Sign up now</a
                         ><button type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="mobile-menu-2" aria-expanded="false">
@@ -21,7 +21,7 @@
                         <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                             <li><a href="{{ url_for('index') }}" class="block py-2 pr-4 pl-3 hover:text-blue-800 text-black rounded lg:bg-transparent lg:p-0" aria-current="page">Home</a></li>
                             <li><a href="#" class="block py-2 pr-4 pl-3 hover:text-blue-800 text-black rounded lg:bg-transparent lg:p-0" aria-current="page">Features</a></li>
-                            <li><a href="#" class="block py-2 pr-4 pl-3 hover:text-blue-800 text-black rounded lg:bg-transparent lg:p-0" aria-current="page">Library</a></li>
+                            <li><a href="{{ url_for('library') }}" class="block py-2 pr-4 pl-3 hover:text-blue-800 text-black rounded lg:bg-transparent lg:p-0" aria-current="page">Library</a></li>
                             <li><a href="{{ url_for('upload') }}" class="block py-2 pr-4 pl-3 hover:text-blue-800 text-black rounded lg:bg-transparent lg:p-0" aria-current="page">Upload</a></li>
                             <li><a href="{{ url_for('login') }}" class="block py-2 pr-4 pl-3 hover:text-blue-800 text-black rounded lg:bg-transparent lg:p-0" aria-current="page">Account</a></li>
                         </ul>
@@ -30,6 +30,17 @@
             </nav>
         </header>
     </div>
+    <script>
+        const menuButton = document.querySelector('.lg\\:hidden');
+        const mobileMenu = document.getElementById('mobile-menu-2');
+
+        menuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden'); // Toggle 'hidden' class
+            mobileMenu.classList.toggle('block');  // Toggle 'block' class
+
+
+        });
+    </script> 
     {% block content %}{% endblock %}
 </body>
 </html>
