--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="relative isolate px-6 pt-14 lg:px-8 pt-20">
+<div class="relative isolate px-6 lg:px-8 pt-20">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true"></div>
     <div class="mx-auto max-w-2xl py-10 sm:py-48 lg:py-10">
         <div class="text-center">
