--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -8,16 +8,16 @@
   <style>
     #navButtons {
       transition: opacity 1s ease-in-out;
-      opacity: 0; /* Start with the nav bar hidden */
+      opacity: 0;
       position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
       backdrop-filter: backdrop-blur-md;
-      background-color: rgba(255, 255, 255, 0.9); /* Adjust background opacity */
+      background-color: rgba(255, 255, 255, 0.9); 
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       display: flex;
-      justify-content: center; /* Center the button horizontally */
+      justify-content: center;
       align-items: center;
       padding: 16px;
       z-index: 50;
@@ -65,28 +65,43 @@
       var nav = document.getElementById('navButtons');
       var navTrigger = document.getElementById('navTrigger'); 
       var fadeOutTime = 5000;
-
-
+    
       function fadeOutNav() {
         nav.style.opacity = '0';
-        setTimeout(() => { nav.style.display = 'none'; }, 1000);
+        setTimeout(() => { nav.style.visibility = 'hidden'; }, 1000);
       }
-
+    
       function fadeInNav() {
-        nav.style.display = 'flex'; 
+        nav.style.visibility = 'visible'; 
         nav.style.opacity = '1';
       }
-
+    
       setTimeout(fadeInNav, 100); 
       var fadeOutDelay = setTimeout(fadeOutNav, fadeOutTime); 
-
+    
       navTrigger.addEventListener('mouseenter', fadeInNav);
-
       nav.addEventListener('mouseleave', function() {
         clearTimeout(fadeOutDelay);
         fadeOutDelay = setTimeout(fadeOutNav, fadeOutTime);
       });
+    
+      navTrigger.addEventListener('touchstart', function(event) {
+        var touchedEl = event.target;
+        if (touchedEl.id !== 'libraryButton' && !touchedEl.closest('#libraryButton')) {
+          fadeInNav();
+        }
+      });
+    
+      nav.addEventListener('touchmove', function(event) {
+        var touch = event.touches[0];
+        var touchElement = document.elementFromPoint(touch.clientX, touch.clientY);
+        if (!navTrigger.contains(touchElement)) {
+          clearTimeout(fadeOutDelay);
+          fadeOutDelay = setTimeout(fadeOutNav, fadeOutTime);
+        }
+      });
     });
+    
   </script>
 </body>
 </html>
