--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -27,8 +27,8 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 50px; /* Height of the transparent area for triggering the nav */
-      z-index: 49; /* Below the nav bar */
+      height: 50px; 
+      z-index: 49;
     }
     html, body {
       margin: 0;
@@ -39,20 +39,17 @@
       display: block;
       width: 100vw;
       height: 100vh;
-      border: none;
     }
     #libraryButton {
       font-size: 14px;
       font-weight: bold;
       padding: 8px 16px;
       border-radius: 4px;
-      text-align: center;
+      text-align: center;}
   </style>
 </head>
 <body style="overflow: hidden;">
-
   <iframe srcdoc="{{ amended_html }}" title="book_content"></iframe>
-
   <div id="navTrigger"></div> 
   <div id="navButtons">
     <a href='{{ url_for("library") }}'>
@@ -63,9 +60,10 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       var nav = document.getElementById('navButtons');
-      var navTrigger = document.getElementById('navTrigger'); 
-      var fadeOutTime = 5000;
+      var navTrigger = document.getElementById('navTrigger');
+      var fadeOutTime = 5000; 
     
+
       function fadeOutNav() {
         nav.style.opacity = '0';
         setTimeout(() => { nav.style.visibility = 'hidden'; }, 1000);
@@ -73,33 +71,30 @@
     
       function fadeInNav() {
         nav.style.visibility = 'visible'; 
-        nav.style.opacity = '1';
       }
     
-      setTimeout(fadeInNav, 100); 
-      var fadeOutDelay = setTimeout(fadeOutNav, fadeOutTime); 
+      var inactivityTimeout;
     
-      navTrigger.addEventListener('mouseenter', fadeInNav);
-      nav.addEventListener('mouseleave', function() {
-        clearTimeout(fadeOutDelay);
-        fadeOutDelay = setTimeout(fadeOutNav, fadeOutTime);
+      function resetInactivityTimeout() {
+        clearTimeout(inactivityTimeout);
+        inactivityTimeout = setTimeout(fadeOutNav, fadeOutTime);
+      }
+    
+      navTrigger.addEventListener('mouseenter', function() {
+        fadeInNav();
+        resetInactivityTimeout();
       });
+    
+      nav.addEventListener('mouseleave', fadeOutNav);
     
       navTrigger.addEventListener('touchstart', function(event) {
-        var touchedEl = event.target;
-        if (touchedEl.id !== 'libraryButton' && !touchedEl.closest('#libraryButton')) {
-          fadeInNav();
-        }
+        fadeInNav();
+        resetInactivityTimeout();
+        event.preventDefault(); 
       });
     
-      nav.addEventListener('touchmove', function(event) {
-        var touch = event.touches[0];
-        var touchElement = document.elementFromPoint(touch.clientX, touch.clientY);
-        if (!navTrigger.contains(touchElement)) {
-          clearTimeout(fadeOutDelay);
-          fadeOutDelay = setTimeout(fadeOutNav, fadeOutTime);
-        }
-      });
+      fadeInNav();
+      resetInactivityTimeout();
     });
     
   </script>
