--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -17,11 +17,27 @@
       background-color: rgba(255, 255, 255, 0.9); 
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
       padding: 16px;
       z-index: 50;
     }
+    #libraryButtonContainer {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    #zoomControls {
+        display: flex;
+        gap: 10px; 
+        margin-left: auto;
+      }
+      #increaseTextButton, #decreaseTextButton {
+        padding: 5px 10px; 
+        margin: 0;
+        font-size: 16px; 
+        cursor: pointer;
+      }
     #navTrigger {
       position: fixed;
       bottom: 0;
@@ -49,28 +65,41 @@
   </style>
 </head>
 <body style="overflow: hidden;">
-  <iframe srcdoc="{{ amended_html }}" title="book_content"></iframe>
+  <iframe srcdoc="{{ amended_html }}" title="book_content" id='iframe'></iframe>
   <div id="navTrigger"></div> 
   <div id="navButtons">
-    <a href='{{ url_for("library") }}'>
+    <a href='{{ url_for("library") }}' id="libraryButtonContainer">
       <button id="libraryButton">Return to Library</button>
     </a>
+    <div id="zoomControls">
+      <button id="resetTextButton">↺</button>
+      <button id="decreaseTextButton">-</button>
+      <button id="increaseTextButton">+</button>
+    </div>
   </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       var nav = document.getElementById('navButtons');
       var navTrigger = document.getElementById('navTrigger');
-      var fadeOutTime = 5000; 
+      var fadeOutTime = 5000;
+      var navVisible = false;
+      var iframe = document.getElementById('iframe');
+      var defaultFontSize;
     
-
       function fadeOutNav() {
-        nav.style.opacity = '0';
-        setTimeout(() => { nav.style.visibility = 'hidden'; }, 1000);
+        if (navVisible) {
+          nav.style.opacity = '0';
+          setTimeout(() => { nav.style.visibility = 'hidden'; navVisible = false; }, 1000);
+        }
       }
     
       function fadeInNav() {
-        nav.style.visibility = 'visible'; 
+        if (!navVisible) {
+          nav.style.visibility = 'visible';
+          nav.style.opacity = '1';
+          navVisible = true;
+        }
       }
     
       var inactivityTimeout;
@@ -85,16 +114,46 @@
         resetInactivityTimeout();
       });
     
-      nav.addEventListener('mouseleave', fadeOutNav);
+      nav.addEventListener('mouseleave', function() {
+        fadeOutNav();
+        resetInactivityTimeout();
+      });
     
       navTrigger.addEventListener('touchstart', function(event) {
         fadeInNav();
         resetInactivityTimeout();
-        event.preventDefault(); 
+        event.preventDefault();
       });
     
-      fadeInNav();
+      setTimeout(fadeInNav, 100);
       resetInactivityTimeout();
+    
+      iframe.addEventListener('load', function() {
+        var iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+        defaultFontSize = parseInt(getComputedStyle(iframeDoc.body).fontSize);
+    
+        function changeIframeTextSize(delta) {
+          var currentSize = parseInt(iframeDoc.body.style.fontSize) || defaultFontSize;
+          if (delta === 'reset') {
+            iframeDoc.body.style.fontSize = defaultFontSize + 'px';
+          } else {
+            iframeDoc.body.style.fontSize = (currentSize + delta) + 'px';
+          }
+          resetInactivityTimeout();
+        }
+    
+        document.getElementById('increaseTextButton').addEventListener('click', function() {
+          changeIframeTextSize(1);
+        });
+    
+        document.getElementById('decreaseTextButton').addEventListener('click', function() {
+          changeIframeTextSize(-1);
+        });
+    
+        document.getElementById('resetTextButton').addEventListener('click', function() {
+          changeIframeTextSize('reset');
+        });
+      });
     });
     
   </script>
