book upload validation

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -35,8 +35,8 @@
         const mobileMenu = document.getElementById('mobile-menu-2');
 
         menuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden'); // Toggle 'hidden' class
-            mobileMenu.classList.toggle('block');  // Toggle 'block' class
+            mobileMenu.classList.toggle('hidden'); 
+            mobileMenu.classList.toggle('block');  
 
 
         });
