--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -116,24 +116,14 @@
       border-radius: 4px;
       text-align: center;}
 
-      :root {
-        --text-color: #000;
-        --background-color: #fff;
-      }
-      @media  {
-        :root {
-          --text-color: #fff;
-          --background-color: #000;
-        }
-      }
 
 @media (prefers-color-scheme: dark) {
   html {
-    background-color: var(--background-color) !important;
+    background-color: #fff !important;
   }
     * {
-      color: var(--text-color) !important;
-      background-color: var(--background-color) !important;
+      color: #fff !important;
+      background-color: #000 !important;
     }
    a {
         color: #bb86fc !important;
