--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -119,7 +119,7 @@
 
 @media (prefers-color-scheme: dark) {
   html {
-    background-color: #fff !important;
+    background-color: #000000 !important;
   }
     * {
       color: #fff !important;
