--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -125,7 +125,7 @@
       color: #fff !important;
       background-color: #000 !important;
     }
-   a {
+   a, u {
         color: #bb86fc !important;
     }
     svg text {
@@ -148,7 +148,11 @@
     img {
         opacity: 0;
     transition: opacity 0.5s ease-in-out;
+      max-width: 100%;
+      height: auto; 
+      display: block; 
     }
+
 
     img.loaded {
     opacity: 1;
